changing text from longer_text doesn't work
can get the textViews from longer_text.xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:background="@android:color/transparent"
             android:ems="10"
             android:gravity="center"
-            android:hint="@string/name1"
+            android:hint="@string/name"
             android:inputType="text"
             android:textColor="?colorOnSecondary" />
     </LinearLayout>
