--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:text="@string/textview"
+            android:text="@string/successfully_made_10_steps"
             android:textColor="@color/black" />
         <RadioGroup
             android:id="@+id/radioGroupPhoneNumbers"
